--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.center{
+    text-align: center;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+	margin-top: 45px;
+    width: 100%;
+}
+
+.bg { 
+	background: url('https://res.cloudinary.com/april-skrine/image/upload/v1645033767/1073233-black-wood-panels_se3bkb.jpg') no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	margin-top: -60px;
+  padding-bottom: 200px;
+}
+
+.header {
+	padding-top: 50px;
+}
+
+.border {
+  padding-right: 10px;
+}
+
+.border-review {
+  padding-right: 10px;
+  padding-bottom: 10px
+}
+
+.button-click {
+  color: #C1BBDA !important;
+  background: black !important;
+}
+
+.center-div {
+  margin: auto;
+  width: 80%;
+  border: 0px solid white;
+  padding: 10px;
+
+}
